doc/paper/tst/jalangi_test/RESULTS_V2/global_only/timeResultsLya.txt
The name of file 3d-cube.js

real	15m16.628s
user	15m27.896s
sys	0m6.220s
The name of file 3d-morph.js

real	2m34.486s
user	2m34.440s
sys	0m0.220s
The name of file 3d-raytrace.js

real	0m40.543s
user	0m40.640s
sys	0m0.116s
The name of file access-binary-trees.js

real	0m1.686s
user	0m1.692s
sys	0m0.008s
The name of file access-fannkuch.js

real	0m0.569s
user	0m0.568s
sys	0m0.000s
The name of file access-nbody.js

real	0m15.662s
user	0m15.692s
sys	0m0.036s
The name of file access-nsieve.js

real	0m0.341s
user	0m0.312s
sys	0m0.036s
The name of file bitops-3bit-bits-in-byte.js

real	0m0.220s
user	0m0.216s
sys	0m0.004s
The name of file bitops-bits-in-byte.js

real	0m0.403s
user	0m0.400s
sys	0m0.004s
The name of file bitops-bitwise-and.js

real	17m47.810s
user	17m47.120s
sys	0m2.040s
The name of file bitops-nsieve-bits.js

real	0m0.338s
user	0m0.332s
sys	0m0.004s
The name of file controlflow-recursive.js

real	0m0.383s
user	0m0.376s
sys	0m0.012s
The name of file crypto-aes.js

real	0m11.376s
user	0m11.316s
sys	0m0.180s
The name of file crypto-md5.js

real	0m8.913s
user	0m8.928s
sys	0m0.032s
The name of file crypto-sha1.js

real	0m7.702s
user	0m7.704s
sys	0m0.016s
The name of file date-format-tofte.js
undefined:1
Y()
^

ReferenceError: Y is not defined
    at eval (eval at _obj (/home/gntousakis/lya/core/src/txfm.js:450:20), <anonymous>:1:1)
    at eval (<anonymous>)
    at eval (/home/gntousakis/lya/core/src/txfm.js:450:20)
    at Object.apply (/home/gntousakis/lya/core/src/txfm.js:153:32)
    at Date.formatDate (/home/gntousakis/lya/paper/tst/jalangi_test/sunspider/date-format-tofte.js:364:26)
    at Object.<anonymous> (/home/gntousakis/lya/paper/tst/jalangi_test/sunspider/date-format-tofte.js:379:28)
    at Object.apply (/home/gntousakis/lya/core/src/txfm.js:300:22)
    at Module._compile (module.js:653:30)
    at Object.Module._extensions..js (module.js:664:10)
    at Module.load (module.js:566:32)

real	0m0.073s
user	0m0.068s
sys	0m0.000s
The name of file date-format-xparb.js
undefined:1
Date.prototype.format0 = function(){return this.getFullYear() + '-' + String.leftPad(this.getMonth() + 1, 2, '0') + '-' + String.leftPad(this.getDate(), 2, '0');}
                                                                             ^

TypeError: String.leftPad is not a function
    at Date.format0 (eval at _obj (/home/gntousakis/lya/core/src/txfm.js:450:20), <anonymous>:1:78)
    at Date.dateFormat (/home/gntousakis/lya/paper/tst/jalangi_test/sunspider/date-format-xparb.js:107:22)
    at Object.<anonymous> (/home/gntousakis/lya/paper/tst/jalangi_test/sunspider/date-format-xparb.js:498:28)
    at Object.apply (/home/gntousakis/lya/core/src/txfm.js:300:22)
    at Module._compile (module.js:653:30)
    at Object.Module._extensions..js (module.js:664:10)
    at Module.load (module.js:566:32)
    at tryModuleLoad (module.js:506:12)
    at Function.Module._load (module.js:498:3)
    at Module.require (module.js:597:17)

real	0m0.073s
user	0m0.068s
sys	0m0.004s
The name of file math-cordic.js

real	1m7.276s
user	1m7.240s
sys	0m0.132s
The name of file math-partial-sums.js

real	8m30.228s
user	8m29.980s
sys	0m0.956s
The name of file math-spectral-norm.js

real	0m0.423s
user	0m0.424s
sys	0m0.008s
The name of file regexp-dna.js

real	0m0.882s
user	0m0.864s
sys	0m0.028s
The name of file string-base64.js

real	0m39.925s
user	0m39.912s
sys	0m0.076s
The name of file string-fasta.js

real	1m12.600s
user	1m12.560s
sys	0m0.156s
The name of file string-tagcloud.js

real	0m6.921s
user	0m6.968s
sys	0m0.092s
The name of file string-unpack-code.js

real	0m4.697s
user	0m4.684s
sys	0m0.044s
The name of file string-validate-input.js

real	0m0.144s
user	0m0.148s
sys	0m0.004s
